renamed; fixed bug introduced with optimization; changed makefile

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,7 +1,8 @@
 CC = mpicc
 CFLAGS =
 LIBS =
-TARGETS = grid_4_4
+SOURCE = grid
+TARGETS = grid_4_4 grid_512_512
 
 default: clean $(TARGETS)
 all: default
@@ -9,7 +10,10 @@ all: default
 .PHONY: clean
 
 grid_4_4:
-	$(CC) -o grid $(TARGETS).c  $(CFLAGS) -std=c99 $(LIBS)
+	$(CC) $(SOURCE).c -o grid_4_4 $(CFLAGS) -std=c99 $(LIBS) -D RUNTIME_SMALL
+
+grid_512_512:
+	$(CC) $(SOURCE).c -o grid_512_512 $(CFLAGS) -std=c99 $(LIBS)
 
 clean:
 	-rm -f $(TARGETS)
