Added debugging mode

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -2,7 +2,7 @@ CC = mpicc
 CFLAGS =
 LIBS =
 SOURCE = grid
-TARGETS = grid_4_4 grid_512_512
+TARGETS = grid_4_4 grid_512_512 debug_grid
 
 default: clean $(TARGETS)
 all: default
@@ -14,6 +14,9 @@ grid_4_4:
 
 grid_512_512:
 	$(CC) $(SOURCE).c -o grid_512_512 $(CFLAGS) -std=c99 $(LIBS)
+
+debug_grid:
+	$(CC) $(SOURCE).c -o debug_grid $(CFLAGS) output.h -std=c99 $(LIBS) -D DEBUG
 
 clean:
 	-rm -f $(TARGETS)
